src/objects/IsNewDataInstance__c.object
<CustomObject>
    <fields>
        <fullName>IsNewDataConfiguration__c</fullName>
        <label>IsNewData Configuration</label>
        <referenceTo>IsNewDataConfiguration__c</referenceTo>
        <relationshipLabel>IsNewDatas</relationshipLabel>
        <relationshipName>IsNewDatas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastFiredDate__c</fullName>
        <label>Last Fired Date</label>
        <type>DateTime</type>
    </fields>
    <label>IsNewData Instance</label>
    <nameField>
        <displayFormat>D-{0000000000}</displayFormat>
        <label>IsNewData Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IsNewData Instances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>